# dotenv-cpp

./: .env.example  .gitignore  example.cpp  todo-2026-02-05--23-36.md  todo-2026-03-06--20-15.md
csv-reporter/: CMakeLists.txt  config.cpp  config.h  csv_parser.cpp  csv_parser.h  main.cpp  reporter.cpp  reporter.h
csv-reporter/data/: inventory.csv  sales.csv
csv-reporter/test/: config_test.cpp  csv_parser_test.cpp  reporter_test.cpp
dialogs/: Extend-Claude-with-skills.md  The-Complete-Guide-to-Building-Skills-for-Claude.md  dialog-2026-02-03--13-32.md  dialog-2026-02-03--16-27.md  dialog-2026-02-03--16-30.md  dialog-2026-02-03--16-56.md  dialog-2026-02-03--17-03.md  dialog-2026-02-03--17-14.md  dialog-2026-02-03--18-23.md  dialog-2026-02-03--20-17.md  dialog-2026-02-05--15-38.md  dialog-2026-02-05--16-40.md  dialog-2026-02-05--21-26.md  dialog-2026-02-05--22-26.md  dialog-2026-02-05--22-41.md  dialog-2026-02-05--23-06.md  dialog-2026-02-05--23-20.md  dialog-2026-02-05--23-35.md  dialog-2026-03-06--11-49.md  dialog-2026-03-06--12-42.md  dialog-2026-03-06--19-49.md  dialog-2026-03-06--19-56.md  dialog-2026-03-06--20-00.md  dialog-2026-03-06--20-04.md  dialog-2026-03-06--20-47.md  dialog-2026-03-06--21-04.md  dialog-2026-03-06--22-46.md  dialog-2026-03-06--23-17.md  dialog-2026-03-06--23-28.md  dialog-2026-03-06--23-38.md  dialog-2026-03-07--00-22.md  dialog-2026-03-07--00-37.md  dotenv-cpp-windows-guide.md  inject-a-bug-2026-03-06--23-53.md  todo-2026-02-03--17-14.md  understand-the-code-2026-03-06--20-15.md  user-story-csv-reporter.md
docs/superpowers/specs/: 2026-03-16-csv-reporter-user-story-design.md
dotenv-cpp-memory-training/: CMakeLists.txt  README.md  TRAINING_GUIDE.md
dotenv-cpp-memory-training/docs/: 00-setup-guide.md  01-problem-basic-leak.md  02-problem-double-free.md  03-problem-dangling-pointer.md  04-problem-exception-safety.md  05-verification-tools.md  06-copilot-prompt-library.md  07-best-practices.md
dotenv-cpp-memory-training/env-files/: basic.env  complex.env
dotenv-cpp-memory-training/scripts/: check_memory.bat  check_memory.sh
dotenv-cpp-memory-training/src/buggy/: config_manager_v1.cpp  config_manager_v2.cpp  config_manager_v3.cpp  config_manager_v4.cpp
dotenv-cpp-memory-training/src/common/: config_manager.h
dotenv-cpp-memory-training/src/fixed/: config_manager_v1_fixed.cpp  config_manager_v2_fixed.cpp  config_manager_v3_fixed.cpp  config_manager_v4_fixed.cpp
dotenv-cpp-memory-training/tests/: test_v1.cpp  test_v2.cpp  test_v3.cpp  test_v4.cpp
tests/: base_test.cc
